@@ -1,3 +1,4 @@
+2623 [OneClick]             removed the deprecated option "Language to set if it cannot be determined"
 2622 [File Indexer]         choose by default in the file selector "All supported files"
 2621 [OneClick]             fixed the option "Languages to select if selection does not match". Bug #822
 2620 [HD Streams Extractor] improved handling of unsupported tracks
